--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon src/index.js localhost 8080"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sqlite3": "^4.0.7"
+  },
   "devDependencies": {
     "nodemon": "1.18.4"
   },
