--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js localhost 8080"
   },
   "dependencies": {
+    "express": "4.17.0",
     "httpdispatcher": "^2.1.2",
     "sqlite3": "^4.0.7"
   },
